<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EncryptFile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setup_page">SetupPage</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_download_page">DownloadPage</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="action_settings">Settings</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="new_file">New File</string>

</resources>
