<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.encryptfile.MainActivity" >

    <item
        android:id="@+id/cut"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/cut"/>
    <item android:id="@+id/copy"
         android:orderInCategory="2"
         android:title="@string/copy" 
         android:showAsAction="never"></item>
    <item android:id="@+id/delete" 
        android:orderInCategory="5" 
        android:title="@string/delete" 
        android:showAsAction="never"></item>
    <item android:id="@+id/paste" 
        android:title="@string/paste" 
        android:orderInCategory="3" 
        android:showAsAction="never"></item>
    <item android:id="@+id/new_file" 
        android:orderInCategory="4" 
        android:title="@string/new_file" 
        android:showAsAction="never"></item>

</menu>
